# ticket-viewer2

./: README.md
jira-api/: .env.sample  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
jira-api/docs/: 1.requirements.md  2.spec.md  3.task_list.md  4.test_summary.md  5.duckdb_er_diagram.md  6.changelog_specification.md  usage_examples.md
jira-api/examples/: basic_history_example.rs  basic_usage.rs  changelog_parser_example.rs  config_store_example.rs  debug_jira_response.rs  diagnose_deserialization.rs  duckdb_example.rs  history_example.rs  history_json_example.rs  hybrid_integration_example.rs  persistence_example.rs  project_example.rs  search_example.rs  sync_example.rs  sync_with_history_example.rs  time_filter_example.rs
jira-api/src/: changelog_parser.rs  client.rs  config_store.rs  duckdb_store.rs  error.rs  history.rs  json_store.rs  lib.rs  memory.rs  persistence.rs  sync.rs  time_filter.rs
jira-api/src/models/: field.rs  issue.rs  issue_type.rs  mod.rs  priority.rs  project.rs  search.rs  status.rs  user.rs
jira-api/tests/: concurrency_tests.rs  end_to_end_tests.rs  error_scenario_tests.rs  integration_tests.rs  performance_tests.rs
