[package]
name = "jira-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
url = "2.5.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
urlencoding = "2.1"
flate2 = "1.0"

[dev-dependencies]
tokio-test = "0.4.4"
wiremock = "0.6"
tempfile = "3.0"
